--- a/app/views/newsletters/_form.html.erb
+++ b/app/views/newsletters/_form.html.erb
@@ -1,13 +1,13 @@
 
 
-<%= form_with(model: newsletter, url: publish_path(1), local: true) do |form| %>
+<%= form_with(model: @newsletter, url: publish_path, local: true) do |form| %>
 
-  <% if newsletter.errors.any? %>
+  <% if @newsletter.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(newsletter.errors.count, "error") %> prohibited this newsletter from being saved:</h2>
+      <h2><%= pluralize(@newsletter.errors.count, "error") %> prohibited this newsletter from being saved:</h2>
 
       <ul>
-        <% newsletter.errors.full_messages.each do |message| %>
+        <% @newsletter.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
