pushes to Lyra api

--- a/app/views/newsletters/_form.html.erb
+++ b/app/views/newsletters/_form.html.erb
@@ -1,6 +1,6 @@
 
 
-<%= form_with(model: @newsletter, url: publish_path, local: true) do |form| %>
+<%= form_with(model: @newsletter, local: true) do |form| %>
 
   <% if @newsletter.errors.any? %>
     <div id="error_explanation">
