--- a/app/views/newsletters/new.html.erb
+++ b/app/views/newsletters/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Newsletter</h1>
 
-<%= render 'form', locals: {newsletter: @newsletter}  %>
+<%= render 'form', newsletter: @newsletter  %>
 
 
 <%= link_to 'Back', newsletters_path %>
