--- a/app/views/newsletters/edit.html.erb
+++ b/app/views/newsletters/edit.html.erb
@@ -1,6 +1,20 @@
-<h1>Editing Newsletter</h1>
+<br>
+<br>
 
-<%= render 'form', newsletter: @newsletter %>
+<main role="main" class="container">
 
-<%= link_to 'Show', @newsletter %> |
-<%= link_to 'Back', newsletters_path %>
+    
+      <div class="jumbotron">
+ 
+          <div>
+           <h1>Editing Newsletter</h1>
+
+            <%= render 'form', newsletter: @newsletter %>
+
+            <%= link_to 'Show', @newsletter %> |
+            <%= link_to 'Back', newsletters_path %>
+
+        </div>
+      </div>
+            
+</main>
