--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -1,5 +1,18 @@
-<h1>New story</h1>
+<br>
+<br>
+<main role="main" class="container">
 
-<%= render 'form' %>
+    
+      <div class="jumbotron">
+ 
+          <div>
+           <h1>New story</h1>
 
-<%= link_to 'Back', stories_path(@story) %>
+                <%= render 'form' %>
+
+                <%= link_to 'Back', stories_path(@story) %>
+
+        </div>
+      </div>
+            
+</main>
