--- a/app/views/newsletters/new.html.erb
+++ b/app/views/newsletters/new.html.erb
@@ -1,6 +1,19 @@
-<h1>New Newsletter</h1>
 
-<%= render 'form', newsletter: @newsletter  %>
+<br>
+<br>
+<main role="main" class="container">
+
+    
+      <div class="jumbotron">
+ 
+          <div>
+           <h1>New Newsletter</h1>
+            <%= render 'form', newsletter: @newsletter  %>
 
 
-<%= link_to 'Back', newsletters_path %>
+            <%= link_to 'Back', newsletters_path %>
+
+        </div>
+      </div>
+            
+</main>
