--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,30 +1,49 @@
-<h1>Listing stories</h1>
+<br>
+<br>
+<div>
+<p class="btn btn-outline-success my-2 my-sm-0" role="button" ><%= link_to 'Create New Story', new_story_path %></p>
+</div>
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Content</th>
-    <th>Author</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
 
-<% @stories.each do |story| %>
-  <tr>
-    <td><%= story.title %></td>
-    <td><%= sanitize story.html %></td>
-    <td><%= story.author %></td>
-    <td><%= link_to 'Show', [story] %></td>
-    <td><%= link_to 'Edit', edit_story_path(story) %></td>
-    <td><%= link_to 'Destroy', [story], method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+<p id="notice"><%= notice %></p>
+<main role="main" class="container">
+  <div class="jumbotron">
+    <h1>All Stories</h1>
+<hr>
+  <div>
+    <% @stories.each do |story| %>
+     <p><%= story.title %></p>
+      <p><%= sanitize story.html %></p>
+      <p><%= story.author %></p>
+      
+      <p class="btn btn-outline-success my-2 my-sm-0" role="button"><%= link_to 'Show', story %></p>
+      <p class="btn btn-outline-success my-2 my-sm-0" role="button"><%= link_to 'Edit', edit_story_path(story) %></p>
+      <p class="btn btn-outline-success my-2 my-sm-0" role="button"><%= link_to 'Destroy', story, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+       <hr>
+   
+    <% end %>
+  </div>
 
-<br />
 
-<%= link_to 'New Story', new_story_path %>
+  </div>
+  <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+</main>
+<br>
+<br>
+<br>
+
+
+
+
+
+
+
+
 
 
 
